--- a/counterpartygui.html
+++ b/counterpartygui.html
@@ -327,7 +327,7 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <div class="loading">
-                    Wait! let met think!<br />
+                        Wait! Let me think!<br />
                     <img src="images/loading.gif" />
                     </div>
                 </div>
